network-policies/base/envs/dev/monitoring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring-dev
  labels:
    app.kubernetes.io/part-of: network-policies
    env: dev
